--- a/src/components/modal/resizeModal/resize.module.scss
+++ b/src/components/modal/resizeModal/resize.module.scss
@@ -10,16 +10,20 @@
     position: fixed;
     top: 100px;
     left: 100px;
-    cursor: alias;
-    width: 300px;
+    cursor: e-resize;
     height: 300px;
     background: white;
-    border: solid 15px white;
+    border: solid 10px white;
+    z-index: 10;
     &_content{
+      user-select: none;
       cursor: default;
       width: 100%;
       height: 300px;
       background: #535bf2;
+      p{
+        margin: 0;
+      }
     }
   }
 }
